Show list of contacts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
+      <a mat-list-item href="/">Home</a>
       <a mat-list-item href="/contacts">Contacts</a>
     </mat-nav-list>
   </mat-sidenav>
@@ -24,7 +25,7 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>mifinity-angular-test</span>
+      <span>Angular Task</span>
     </mat-toolbar>
     <main>
       <!-- Page content output -->
