--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,18 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+.mat-toolbar.mat-primary {
+  background: #3f51b5;
+}
+.mat-toolbar.mat-primary {
+  background: #3f51b5;
+}
+.mat-h2,
+.mat-title,
+.mat-typography h2 {
+  margin-bottom: 3px;
+}
+.page-block {
+  padding: 26px;
+  width: 300px;
+}
