--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -10,7 +10,7 @@
       <input matInput placeholder="New Contact *" />
     </mat-form-field>
     <button
-      class="new-contact-button"
+      class="form-button contact-form-button"
       type="button"
       (click)="openContactForm()"
     >
