--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,33 @@ body {
 .mat-typography h2 {
   margin-bottom: 3px;
 }
+.mat-h3,
+.mat-subheading-2,
+.mat-typography h3 {
+  font-weight: 700;
+}
 .page-block {
   padding: 26px;
   width: 300px;
+}
+.contact-image {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+}
+.contact-first-name {
+  margin-left: 8px;
+}
+.form-button {
+  border-style: none;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  padding: 8px 35px;
+  margin-left: 6px;
+  border-radius: 2px;
+  &:hover {
+    cursor: pointer;
+    background-color: #e0e0e0;
+  }
 }
