--- a/src/app/components/contact-list/contact-list.component.scss
+++ b/src/app/components/contact-list/contact-list.component.scss
@@ -3,6 +3,7 @@
 }
 .contact-list-item {
   display: flex;
+  margin-bottom: 20px;
   &:hover {
     cursor: pointer;
     background-color: #e0e0e0;
