--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<div class="page-block"><h1>Homepage</h1></div>
+<div class="page-block">
+  <h1>Homepage</h1>
+  <p>Go to contacts page to get started</p>
+</div>
