--- a/src/app/components/contact-form/contact-form.component.scss
+++ b/src/app/components/contact-form/contact-form.component.scss
@@ -10,10 +10,19 @@
 .contact-firstname {
   font-size: 20px;
   font-weight: bold;
+  margin-bottom: 20px;
+}
+.contact-address-form {
+  margin-bottom: 40px;
+}
+.contact-form-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .contact-form-submit-area {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 .contact-form-button {
