--- a/src/app/components/contact-list/contact-list.component.html
+++ b/src/app/components/contact-list/contact-list.component.html
@@ -5,18 +5,36 @@
   </p>
 
   <mat-list class="contact-list">
-    <mat-list-item
-      class="contact-list-item"
-      *ngFor="let contact of contacts"
-      (click)="editContact(contact)"
-    >
-      <!-- <mat-icon aria-label="Side nav toggle icon">perm_identity</mat-icon> -->
-      <img
-        class="contact-image"
-        src="{{ contact.avatar }}"
-        alt="Profile Avatar"
-        onerror="this.src='../../../assets/perm_identity_black_24dp.svg';"
-      /><span class="contact-first-name">{{ contact.first_name }}</span>
-    </mat-list-item>
+    <div class="contact-list-item" *ngFor="let contact of contacts">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image">
+            <img
+              class="contact-image"
+              src="{{ contact.avatar }}"
+              onerror="this.src='../../../assets/perm_identity_black_24dp.svg';"
+              alt="Profile Avatar"
+            />
+          </div>
+          <mat-card-title>{{
+            contact.first_name + " " + contact.last_name
+          }}</mat-card-title>
+          <mat-card-subtitle>Front-End Developer</mat-card-subtitle>
+        </mat-card-header>
+
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz
+            breeds of dog from Japan. A small, agile dog that copes very well
+            with mountainous terrain, the Shiba Inu was originally bred for
+            hunting.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button (click)="editContact(contact)">Edit</button>
+          <button mat-button (click)="deleteContact(contact)">Delete</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
   </mat-list>
 </div>
