--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,9 @@ body {
 .mat-typography h3 {
   font-weight: 700;
 }
+.mat-form-field {
+  width: 100%;
+}
 .page-block {
   padding: 26px;
   width: 300px;
@@ -31,6 +34,7 @@ body {
   height: 30px;
   width: 30px;
   border-radius: 50%;
+  margin: 0;
 }
 .contact-first-name {
   margin-left: 8px;
